--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 alloy-primitives = "0.8"
 alloy-sol-types = "0.8"
+alloy-dyn-abi = { version = "0.8", features = ["eip712"] }
 derive_more = "1.0.0"
 rustc-hash = "2.0.0"
 thiserror = { version = "1.0", optional = true }
@@ -14,4 +15,4 @@ uniswap-v3-sdk = "2.4.0"
 
 [features]
 default = []
-std = ["thiserror", "uniswap-sdk-core/std", "uniswap-v3-sdk/std"]
+std = ["alloy-dyn-abi/std", "thiserror", "uniswap-sdk-core/std", "uniswap-v3-sdk/std"]
