--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ thiserror = { version = "1.0", optional = true }
 uniswap-sdk-core = "3.0.0"
 uniswap-v3-sdk = "2.4.0"
 
+[dev-dependencies]
+once_cell = "1.20.2"
+
 [features]
 default = []
 std = ["thiserror", "uniswap-sdk-core/std", "uniswap-v3-sdk/std"]
