--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,15 @@ edition = "2021"
 [dependencies]
 alloy-primitives = "0.8"
 alloy-sol-types = "0.8"
-derive_more = "1.0.0"
+#derive_more = "1.0.0"
 rustc-hash = "2.0.0"
-thiserror = { version = "1.0", optional = true }
-uniswap-sdk-core = "3.0.0"
-uniswap-v3-sdk = "2.4.0"
+thiserror = { version = "2", default-features = false }
+uniswap-sdk-core = "3.1.0"
+uniswap-v3-sdk = "2.5.0"
 
 [dev-dependencies]
 once_cell = "1.20.2"
 
 [features]
 default = []
-std = ["thiserror", "uniswap-sdk-core/std", "uniswap-v3-sdk/std"]
+std = ["thiserror/std", "uniswap-sdk-core/std", "uniswap-v3-sdk/std"]
