--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 alloy-primitives = "0.8"
 alloy-sol-types = "0.8"
+derive_more = "1.0.0"
 rustc-hash = "2.0.0"
 thiserror = { version = "2", default-features = false }
 uniswap-sdk-core = "3.2.0"
