--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "uniswap-v4-sdk-rs"
+name = "uniswap-v4-sdk"
 version = "0.1.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
@@ -21,6 +21,8 @@ uniswap-sdk-core = "3.2.0"
 uniswap-v3-sdk = "2.9.0"
 
 [dev-dependencies]
+alloy-signer = "0.8"
+alloy-signer-local = "0.8"
 once_cell = "1.20.2"
 
 [features]
