--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v4-sdk"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V4 SDK for Rust"
@@ -15,14 +15,13 @@ exclude = [".github", ".gitignore", "rustfmt.toml"]
 alloy-primitives = "0.8"
 alloy-sol-types = "0.8"
 derive_more = "1.0.0"
-rustc-hash = "2.1.0"
+num-traits = "0.2.19"
 thiserror = { version = "2", default-features = false }
-uniswap-sdk-core = "3.2.0"
-uniswap-v3-sdk = "3.1.1"
+uniswap-sdk-core = "3.3.0"
+uniswap-v3-sdk = "3.3.0"
 
 [dev-dependencies]
-alloy-signer = "0.8"
-alloy-signer-local = "0.8"
+alloy = { version = "0.9", features = ["signer-local"] }
 once_cell = "1.20.2"
 
 [features]
