--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -58,5 +58,9 @@ jobs:
             ${{ runner.os }}-cargo-registry-
       - name: Build
         run: cargo build
+      - name: Build with std feature
+        run: cargo build --features std
       - name: Run tests
         run: cargo test
+      - name: Run tests for std feature
+        run: cargo test --features std
