--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v4-sdk"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V4 SDK for Rust"
@@ -12,18 +12,22 @@ keywords = ["uniswap-v4", "ethereum", "sdk"]
 exclude = [".github", ".gitignore", "rustfmt.toml"]
 
 [dependencies]
-alloy-primitives = "0.8"
-alloy-sol-types = "0.8"
-derive_more = "1.0.0"
-num-traits = "0.2.19"
+alloy-primitives = { version = "0.8", default-features = false }
+alloy-sol-types = { version = "0.8", default-features = false }
+derive_more = { version = "2", default-features = false, features = ["deref", "deref_mut"] }
+num-traits = { version = "0.2", default-features = false, features = ["libm"] }
 thiserror = { version = "2", default-features = false }
-uniswap-sdk-core = "3.3.0"
-uniswap-v3-sdk = "3.3.0"
+uniswap-sdk-core = "3.5.0"
+uniswap-v3-sdk = "3.6.0"
 
 [dev-dependencies]
-alloy = { version = "0.9", features = ["signer-local"] }
-once_cell = "1.20.2"
+alloy = { version = "0.11", default-features = false, features = ["signer-local"] }
+once_cell = "1.20"
 
 [features]
 default = []
-std = ["thiserror/std", "uniswap-sdk-core/std", "uniswap-v3-sdk/std"]
+std = [
+    "thiserror/std",
+    "uniswap-sdk-core/std",
+    "uniswap-v3-sdk/std"
+]
