--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v4-sdk"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V4 SDK for Rust"
@@ -17,11 +17,12 @@ alloy-sol-types = { version = "0.8", default-features = false }
 derive_more = { version = "2", default-features = false, features = ["deref", "deref_mut"] }
 num-traits = { version = "0.2", default-features = false, features = ["libm"] }
 thiserror = { version = "2", default-features = false }
-uniswap-sdk-core = "3.5.0"
-uniswap-v3-sdk = "3.6.0"
+uniswap-sdk-core = "4.0.0"
+uniswap-v3-sdk = "4.0.0"
 
 [dev-dependencies]
-alloy = { version = "0.11", default-features = false, features = ["signer-local"] }
+alloy = { version = "0.12", default-features = false, features = ["signer-local"] }
+num-integer = { version = "0.1", default-features = false }
 once_cell = "1.20"
 
 [features]
