Set MSRV to 1.83 and document it in relevant files
Add `rust-version` field in Cargo.toml to enforce MSRV. Include MSRV details in README.md and create clippy.toml to align with Rust version.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "uniswap-v4-sdk"
 version = "0.4.0"
 edition = "2021"
+rust-version = "1.83"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
 description = "Uniswap V4 SDK for Rust"
 license = "MIT"
