--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uniswap-v4-sdk"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 rust-version = "1.83"
 authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
@@ -12,19 +12,23 @@ categories = ["cryptography::cryptocurrencies", "finance", "no-std"]
 keywords = ["uniswap-v4", "ethereum", "sdk"]
 exclude = [".github", ".gitignore", "rustfmt.toml"]
 
+[package.metadata.docs.rs]
+all-features = true
+
 [dependencies]
 alloy-primitives = { version = "0.8", default-features = false }
 alloy-sol-types = { version = "0.8", default-features = false }
 derive_more = { version = "2", default-features = false, features = ["deref", "deref_mut"] }
 num-traits = { version = "0.2", default-features = false, features = ["libm"] }
 thiserror = { version = "2", default-features = false }
-uniswap-sdk-core = "4.0.0"
-uniswap-v3-sdk = "4.0.0"
+uniswap-sdk-core = "4.0.1"
+uniswap-v3-sdk = "4.2.0"
 
 [dev-dependencies]
-alloy = { version = "0.12", default-features = false, features = ["signer-local"] }
+alloy = { version = "0.13", default-features = false, features = ["signer-local"] }
 num-integer = { version = "0.1", default-features = false }
-once_cell = "1.20"
+once_cell = "1.21"
+tokio = { version = "1.44", features = ["full"] }
 
 [features]
 default = []
@@ -32,4 +36,7 @@ std = [
     "thiserror/std",
     "uniswap-sdk-core/std",
     "uniswap-v3-sdk/std"
+]
+extensions = [
+    "uniswap-v3-sdk/extensions"
 ]
