--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ all-features = true
 alloy = { version = "1.0.1", optional = true, default-features = false, features = ["contract"] }
 alloy-primitives = { version = "1.0", default-features = false }
 alloy-sol-types = { version = "1.0", default-features = false }
-derive_more = { version = "2", default-features = false, features = ["deref", "deref_mut"] }
+derive_more = { version = "2", default-features = false, features = ["deref", "deref_mut", "from"] }
 num-traits = { version = "0.2", default-features = false, features = ["libm"] }
 thiserror = { version = "2", default-features = false }
 uniswap-sdk-core = "5.1.0"
