feat: refine extensions module and reorganize imports
- Adjusted visibility for `extensions` module to be `pub(crate)` for internal use.
- Separated `examples` from `extensions` under conditional compilation for better modularity.
- Updated `Cargo.toml` to declare new dependencies (`alloy/provider-anvil-node`, `alloy/reqwest`, `alloy/signer-local`) for enhanced test functionalities.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,9 @@ extensions = [
     "uniswap-v3-sdk/extensions"
 ]
 test-utils = [
+    "alloy/provider-anvil-node",
+    "alloy/reqwest",
+    "alloy/signer-local",
     "dotenv",
     "once_cell",
     "std"
