feat(examples): add increase liquidity example
- Introduced `increase_liquidity.rs` example to demonstrate adding liquidity to an existing position.
- Updated `examples/README.md` with details and usage instructions for the new example.
- Adjusted `Cargo.toml` to register the new example configuration.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,3 +53,7 @@ required-features = ["extensions"]
 [[example]]
 name = "mint_position_permit2"
 required-features = ["extensions"]
+
+[[example]]
+name = "increase_liquidity"
+required-features = ["extensions"]
